# rust-pad

./: .claudeignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  rust-pad.json  sonar-project.properties  ui-guidelines.md
.claude/: settings.json
.github/: .sonar-heartbeat
.github/vet/: policy.yml
.github/workflows/: ci.yml  release.yml  sonarcloud.yml  vet.yml
.test-files/: special-chars-test.txt
crates/rust-pad/: Cargo.toml  build.rs
crates/rust-pad-config/: Cargo.toml
crates/rust-pad-config/src/: color.rs  config.rs  db_helpers.rs  lib.rs  paths.rs  permissions.rs  problem_log.rs  session.rs  theme.rs  view_state.rs  workspace.rs
crates/rust-pad-config/tests/: config_integration.rs  paths_integration.rs  session_integration.rs
crates/rust-pad-core/: Cargo.toml
crates/rust-pad-core/src/: bookmarks.rs  bracket.rs  buffer.rs  cursor.rs  encoding.rs  history.rs  indent.rs  lib.rs  line_ops.rs  tab_color.rs
crates/rust-pad-core/src/document/: io.rs  mod.rs  multi_cursor.rs
crates/rust-pad-core/src/search/: finder.rs  mod.rs
crates/rust-pad-mod-history/: Cargo.toml
crates/rust-pad-mod-history/src/: config.rs  lib.rs  manager.rs  operation.rs  persistence.rs
crates/rust-pad-mod-history/tests/: integration.rs
crates/rust-pad-ui/: Cargo.toml
crates/rust-pad-ui/src/: dialogs.rs  icons.rs  io_worker.rs  lib.rs  problem_log.rs
crates/rust-pad-ui/src/app/: about_dialog.rs  auto_save.rs  clipboard.rs  context_menu.rs  drag_drop.rs  editing.rs  external_change_dialog.rs  file_dialog_state.rs  file_ops.rs  find_results.rs  live_monitor.rs  menu_bar.rs  mod.rs  problems_dialog.rs  recent_files.rs  search.rs  settings_dialog.rs  shortcuts.rs  split.rs  status_bar.rs  sync_scroll.rs  tab_bar.rs  theme_controller.rs  view_state.rs  workspace_ops.rs
crates/rust-pad-ui/src/app/print/: app.rs  font.rs  job.rs  layout.rs  mod.rs  pdf.rs
crates/rust-pad-ui/src/editor/: input.rs  mod.rs  painter.rs  render_cache.rs  scrollbar.rs  special_chars.rs  theme.rs  widget.rs  wrap_map.rs
crates/rust-pad-ui/src/tabs/: manager.rs  mod.rs  split.rs
crates/rust-pad-ui/src/workspace/: menus.rs  mod.rs  scanner.rs  sidebar.rs  tree.rs  watcher.rs
crates/rust-pad-ui/tests/: app_integration.rs  dialogs.rs  editor_widget.rs
crates/rust-pad-ui/tests/common/: mod.rs
crates/rust-pad/src/: main.rs
packaging/arch/: PKGBUILD
packaging/linux/: rust-pad.desktop
packaging/macos/: Info.plist.template  bundle.sh
