[workspace]
resolver = "2"
members = ["crates/rust-pad", "crates/rust-pad-core", "crates/rust-pad-ui", "crates/rust-pad-mod-history", "crates/rust-pad-config"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Breno RdV"]

[workspace.dependencies]
anyhow = "1.0.101"
ropey = "1.6.1"
egui = "0.33.3"
eframe = "0.33.3"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
regex = "1.12.3"
encoding_rs = "0.8.35"
chardetng = "0.1.17"
rfd = "0.17.2"
trash = "5.2.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
arboard = "3.6.1"
dark-light = "2.0.0"

rust-pad-config = { path = "crates/rust-pad-config" }
rust-pad-core = { path = "crates/rust-pad-core" }
rust-pad-ui = { path = "crates/rust-pad-ui" }
rust-pad-mod-history = { path = "crates/rust-pad-mod-history" }
clap = { version = "4.5.58", features = ["derive"] }
egui_kittest = { version = "0.33.3", features = ["eframe"] }
bincode = "1.3.3"
redb = "3.1.0"
tempfile = "3.25.0"
dirs = "6.0.0"
chrono = "0.4.43"
image = { version = "0.25.9", default-features = false, features = ["png"] }