[workspace]
resolver = "2"
members = ["crates/rust-pad", "crates/rust-pad-core", "crates/rust-pad-ui", "crates/rust-pad-mod-history", "crates/rust-pad-config"]

[workspace.package]
version = "2.1.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Breno RdV"]
description = "Cross-platform notepad application inspired on Notepad++"
repository = "https://github.com/brenordv/rust-pad"


[workspace.dependencies]
anyhow = "1.0.102"
ropey = "1.6.1"
egui = "0.34.1"
eframe = "0.34.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
regex = "1.12.3"
encoding_rs = "0.8.35"
chardetng = "1.0.0"
rfd = "0.17.2"
trash = "5.2.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
arboard = "3.6.1"
dark-light = "2.0.0"

rust-pad-config = { path = "crates/rust-pad-config" }
rust-pad-core = { path = "crates/rust-pad-core" }
rust-pad-ui = { path = "crates/rust-pad-ui" }
rust-pad-mod-history = { path = "crates/rust-pad-mod-history" }
clap = { version = "4.6.0", features = ["derive"] }
egui_kittest = { version = "0.34.1", features = ["eframe"] }
bincode = "=1.3.3" # Never update.
redb = "4.0.0"
tempfile = "3.27.0"
dirs = "6.0.0"
chrono = "0.4.44"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pdf-writer = "0.14.0"
ttf-parser = "0.25.1"
opener = { version = "0.8.4", features = ["reveal"] }
uuid = { version = "1.23.0", features = ["v4"] }