[workspace]
resolver = "2"
members = ["crates/rust-pad", "crates/rust-pad-core", "crates/rust-pad-ui", "crates/rust-pad-mod-history", "crates/rust-pad-config"]

[workspace.package]
version = "2.12.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Breno RdV"]
description = "Cross-platform notepad application inspired on Notepad++"
repository = "https://github.com/brenordv/rust-pad"

[workspace.dependencies]
rust-pad-config = { path = "crates/rust-pad-config" }
rust-pad-core = { path = "crates/rust-pad-core" }
rust-pad-ui = { path = "crates/rust-pad-ui" }
rust-pad-mod-history = { path = "crates/rust-pad-mod-history" }
anyhow = "1.0.102"
arboard = "3.6.1"
bincode = "=1.3.3" # Never update.
chardetng = "1.0.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dark-light = "2.0.0"
dirs = "6.0.0"
eframe = "0.34.3"
egui = "0.34.3"
egui-phosphor = { version = "0.12.0", default-features = false, features = ["regular"] }
egui_kittest = { version = "0.34.3", features = ["eframe"] }
encoding_rs = "0.8.35"
image = { version = "0.25.10", default-features = false, features = ["png"] }
libc = "0.2.186"
# macOS backend: FSEvents (one fd for the whole recursive watch) rather than
# kqueue (one fd PER watched dir), which exhausted the macOS .app 256-fd
# RLIMIT_NOFILE on large workspaces (EMFILE / "Too many open files"). The
# FSEvents path-canonicalisation/coalescing quirks are handled by the
# reconciled rescan in workspace/scanner.rs + the "Reload from disk" action.
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7.0"
opener = { version = "0.8.5", features = ["reveal"] }
pdf-writer = "0.15.0"
redb = "4.1.0"
regex = "1.12.4"
rfd = "0.17.2"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tempfile = "3.27.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trash = "5.2.6"
ttf-parser = "0.25.1"
uuid = { version = "1.23.3", features = ["v4"] }