[package]
name = "rust-pad-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
redb.workspace = true
tracing.workspace = true
dirs.workspace = true
anyhow = "1"

[dev-dependencies]
tempfile.workspace = true
