[package]
name = "rust-pad-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
ropey.workspace = true
rust-pad-config.workspace = true
rust-pad-core.workspace = true
tracing.workspace = true
rfd.workspace = true
arboard.workspace = true
syntect.workspace = true
dark-light.workspace = true
dirs.workspace = true
chrono.workspace = true
image.workspace = true
pdf-writer.workspace = true
ttf-parser.workspace = true
opener.workspace = true
uuid.workspace = true
trash.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
egui-phosphor.workspace = true
encoding_rs.workspace = true

[dev-dependencies]
egui_kittest.workspace = true
tempfile.workspace = true
