[package]
name = "rust-pad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
rust-pad-ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Unix-only: raise the open-file-descriptor soft limit at startup (see
# raise_fd_limit in main.rs). macOS .app bundles inherit a 256-fd soft limit.
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[build-dependencies]
winresource = "0.1.31"